// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.InputMixin interface editable(setStatecallback) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={true}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={true}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface editable(setStatecallback) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface getChangeFeedback() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface getFeedBack() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface getFeedBack() 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="success"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface getInputWrapper(inpuid) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface getLabel(idinput) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface getMessage() should return null, second: shoudl return new mesage 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface getValue() should return value 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
      value="My Value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface getValue() value is empty. Should return empty string. 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isError() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Error message"
    readonly={false}
    required={true}
  >
    <text-input
      feedback="error"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isError() 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="success message"
    readonly={false}
    required={true}
  >
    <text-input
      feedback="success"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Default value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isInitial() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isInitial() 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Error messagess"
    readonly={false}
  >
    <text-input
      feedback="error"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isInput() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isLoading() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isReadOnly() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isReadOnly() 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={true}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={true}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isSuccess() fisr return false, second return true 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="This is success message"
    readonly={false}
    required={true}
  >
    <text-input
      feedback="success"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Success Value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isWarning() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-warning uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="warning"
    message="Warning message"
    readonly={false}
    required={true}
  >
    <text-input
      feedback="warning"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface isWarning() 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="success message"
    readonly={false}
    required={true}
  >
    <text-input
      feedback="success"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Default value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface readOnly(setStatecallback) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface readOnly(setStatecallback) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={true}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={true}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface reset(setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-read-only uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="New Message"
    readonly={true}
    required={true}
  >
    <text-input
      feedback="success"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={true}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="New Value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface reset(setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setChangeFeedback() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="Error message from setChangeFeedback"
    readonly={false}
    required={true}
  >
    <text-input
      feedback="error"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Error text"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setEditableValue(false, setStateCallback) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setEditableValue(false, setStateCallback) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-read-only uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={true}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={true}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setEditableValue(true, setStateCallback) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setEditableValue(true, setStateCallback) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="John Doe"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setError(message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setError(message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="This is error mesage"
    readonly={false}
  >
    <text-input
      feedback="error"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Error value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setFeedBack(feedback, message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setFeedBack(feedback, message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="This is valid message."
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="success"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
      value="This is valid value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setInitial(msg, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="This input is required"
    readonly={false}
    required={true}
  >
    <text-input
      feedback="error"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setInitial(msg, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    message="Initial Message"
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setLoading(message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setLoading(message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="loading"
    message="Loading messsagess"
    readonly={false}
  >
    <text-input
      disabled={true}
      feedback="loading"
      id="idText-input"
      loading={true}
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Value is loaded"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setMessage(msg, setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setMessage(msg, setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    message="New Message"
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setSuccess(message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setSuccess(message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-success uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="success"
    message="This is success message"
    readonly={false}
  >
    <text-input
      feedback="success"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Success Value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setValue(value,setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setValue(value,setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="idTextArea"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Desctiption"
    for="idTextArea-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      autoResize={true}
      feedback="initial"
      id="idTextArea-input"
      mainAttrs={Object {}}
      maxRows={10}
      name="idTextArea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readonly={false}
      ref_={[Function]}
      rows={5}
      type="textarea"
      value="My New Set Value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setWarning(message, value, setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.InputMixin interface setWarning(message, value, setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-warning uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="warning"
    message="This is warning message"
    readonly={false}
  >
    <text-input
      feedback="warning"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Warning Value"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface focus() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Anna Simpson"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface focus() 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Anna Simpson"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface getBlurFeedback() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface isOpen() should return false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface isTextInput() should return true 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Anna Simpson"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface isValid() 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    required={true}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
      value="Anna Simpson"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface isValid() should return false 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-error uu5-forms-input-icon"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
    required={true}
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    feedback="error"
    message="This field is required."
    readonly={false}
    required={true}
  >
    <text-input
      feedback="error"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface setAutocompleteItems(items,opt,setStateCallBack) 1`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.TextInputMixin interface setAutocompleteItems(items,opt,setStateCallBack) 2`] = `
<div
  className="uu5-forms-text-area uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="idText"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Full name"
    for="idText-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
  >
    <text-input
      feedback="initial"
      id="idText-input"
      mainAttrs={Object {}}
      name="idText-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="John Smith"
      readonly={false}
      ref_={[Function]}
      rows={3}
      type="textarea"
    />
  </InputWrapper>
</div>
`;
